--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,9 @@ dependencies {
 
     //vanilla place picker
     implementation 'com.github.Mindinventory:VanillaPlacePicker:0.1.0'
+
+    //glide
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
